--- a/assignment 3/assignment 3.cbp
+++ b/assignment 3/assignment 3.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="assignment 1" />
+		<Option title="assignment 3" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/assignment 1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/assignment 3" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/assignment 1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/assignment 3" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,7 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="hello.cpp" />
+		<Unit filename="gradeCalc.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
